Translating offical example, part 2

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /dist/DrawingSapiensMainWindow.exe
 /dist/DrawingSapiensMainWindow.zip
 /DrawingSapiensMainWindow.spec
+/dsbackend/__pycache__/dspyqt5.cpython-38.pyc
