--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /dsbackend/__pycache__/dspyqt5.cpython-38.pyc
 /__pycache__/DSpyqt5MainWindow.cpython-38.pyc
 /__pycache__/DSTabletApplication.cpython-38.pyc
+/Pipfile
